track games, display winner, log total games won per team, reset board without refreshing page

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,40 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="./style.css" rel="stylesheet" type="text/css">
+    <title>Tic Tac Toe App</title>
+  </head>
+  <body>
+    <h1 class="h">Tic Tac Toe</h1>
+    <div id="app">
+      <h2 class="h">Game On!</h2>
+      <table id="game">
+        <tr>
+          <td id="00"></td>
+          <td id="01"></td>
+          <td id="02"></td>
+        </tr>
+        <tr>
+          <td id="10"></td>
+          <td id="11"></td>
+          <td id="12"></td>
+        </tr>
+        <tr>
+          <td id="20"></td>
+          <td id="21"></td>
+          <td id="22"></td>
+        </tr>
+      </table>
+      <div>
+        <button id="reset">Reset</button>
+      </div>
+      <div>
+        <p id="stats">Leaderboard</p>
+        <p id="xwin"></p>
+        <p id="owin"></p>
+      </div>
+    </div>
+  <script src="./app.js"></script>
+  </body>
+</html>
 
